# ethos-llm

./: .gitignore  README.md  __init__.py  check_and_monitor.sh  experiment.md  monitor.sh  pyproject.toml  requirements.txt  run.sh  setup.py
data/: sample_scenarios.csv
results/: checkpoint.json  config.json  config_simplified.json  dashboard.json
results/analysis/: analysis.json  responses.csv  summary.md
results/raw_responses/: ethics_0_deepseek-r1:8b.json  ethics_0_llama3.2:latest.json  ethics_1_deepseek-r1:8b.json  ethics_1_llama3.2:latest.json  ethics_2_deepseek-r1:8b.json  ethics_2_llama3.2:latest.json  ethics_3_deepseek-r1:8b.json  ethics_3_llama3.2:latest.json  ethics_4_deepseek-r1:8b.json  ethics_4_llama3.2:latest.json  ethics_5_deepseek-r1:8b.json  ethics_5_llama3.2:latest.json  ethics_6_deepseek-r1:8b.json  ethics_6_llama3.2:latest.json  ethics_7_deepseek-r1:8b.json  ethics_7_llama3.2:latest.json  ethics_8_deepseek-r1:8b.json  ethics_8_llama3.2:latest.json  ethics_9_deepseek-r1:8b.json  ethics_9_llama3.2:latest.json  moral_0_deepseek-r1:8b.json  moral_0_llama3.2:latest.json  moral_1_deepseek-r1:8b.json  moral_1_llama3.2:latest.json  moral_2_deepseek-r1:8b.json  moral_2_llama3.2:latest.json  moral_3_deepseek-r1:8b.json  moral_3_llama3.2:latest.json  moral_4_deepseek-r1:8b.json  moral_4_llama3.2:latest.json  (+10 more)
scripts/: __init__.py  analyze_results.py  check_progress.py  download_datasets.py  fix_path.py  run_experiment.py
src/: __init__.py
test-2/: checkpoint.json  config.json  config_simplified.json  dashboard.json  results.csv
tests/: __init__.py
(+31 files in other folders)
